Add itch.io iframe for The Great Tuna Escape

--- a/src/content/projects/the-great-tuna-escape.mdx
+++ b/src/content/projects/the-great-tuna-escape.mdx
@@ -10,6 +10,9 @@ tags: [Unity, GameJam, Windows, WebGL, Completed]
 # isDraft:
 ---
 
+## Game Preview
+<iframe frameborder="0" src="https://itch.io/embed-upload/10506970?color=333333" allowfullscreen="" width="640" height="380"><a href="https://gnoxnahtedev.itch.io/reupload-pixel-game-jam-24">Play Reupload Pixel Game Jam-24 on itch.io</a></iframe>
+
 ## Introduction
 This game was my submission for [Pixel Game Jam - 2024](https://itch.io/jam/-pixel-game-jam-2024). I wasn't able to work on the game for the full duration as I was still in <abbr title="National Service">NS</abbr> and had some duties. 
 
@@ -34,7 +37,7 @@ Late game (closer bags, faster diver). Some parts are similar to Early game:
 3. Diver gets close to them
     - Since the diver is very fast, if they don't have enough boost, they can "dance" with the diver (keep near missing the diver) and get a lot of boost at once.
 
-## Some design decisions
+## Design decisions
 The general format was inspired from [Jetpack Joyride](https://www.halfbrick.com/games/jetpack-joyride-classic).
 
 ### Near misses
