Add ranking (sorting) for projects

--- a/src/content/projects/_template.mdx
+++ b/src/content/projects/_template.mdx
@@ -7,6 +7,14 @@ startDate: # format is YYYY-MM-DD
 # githubLink: 
 thumbnailPath:
 tags: []
+# Rank for sorting project in the project page. 0 is the best project
+# 0 - 99: Very good projects
+# 100 - 199: Above average projects 
+# 200 - 299: Average projects
+# 300 - 399: Below average projects
+# 400 - 500: Bad / dropped projects
+rank: 
+# isUnlisted: # Don't show in projects page
 # isDraft:
 ---
 
