--- a/src/content/projects/new-portfolio-website.mdx
+++ b/src/content/projects/new-portfolio-website.mdx
@@ -7,6 +7,7 @@ projectLink: https://gnoxnahte.dev
 githubLink: https://github.com/GnoxNahte/portfolio-main
 thumbnailPath: "../../images/NewPortfolioWebsite/NewPortfolioThumbnail.png"
 tags: [Astro, Personal, Website, Ongoing]
+rank: 200
 # isDraft:
 ---
 
