--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -6,6 +6,7 @@ startDate: 2023-01-30 # format is YYYY-MM-DD
 projectLink: https://gnoxnahte.com/ # default is null, put link if possible
 githubLink: https://github.com/GnoxNahte/portfolio # default is null, put link if possible
 thumbnailPath: "../../images/PortfolioWebsite/PortfolioThumbnail.png"
+rank: 5
 tags: [Astro, Personal, Website, Ongoing] 
 
 ---
