--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -5,6 +5,7 @@ startDate: 2022-08-21 # format is YYYY-MM-DD
 releaseDate: 2022-08-28 # format is YYYY-MM-DD
 projectLink: https://team-auboreal.itch.io/sentient-buffet # default is null, put link if possible
 thumbnailPath: "../../images/SentientBuffet/SentientBuffetThumbnail.png"
+rank: 101
 tags: [Unity, GameJam, Windows, Completed]
 
 ---
