--- a/src/content/projects/spellbound-rollers.mdx
+++ b/src/content/projects/spellbound-rollers.mdx
@@ -5,6 +5,7 @@ startDate: 2022-07-16
 releaseDate: 2022-07-18
 projectLink: "https://ategon.itch.io/spellbound-rollers"
 thumbnailPath: "../../images/SpellboundRollers/SpellboundRollers.png"
+rank: 100
 tags: [Unity, GameJam, Windows, Completed]
 ---
 
