--- a/src/content/projects/event-registration-website.mdx
+++ b/src/content/projects/event-registration-website.mdx
@@ -6,6 +6,7 @@ releaseDate: 2023-04-12 # format is YYYY-MM-DD
 projectLink: https://gnoxnahte-event-registration.netlify.app # default is null, put link if possible
 # githubLink:  # default is null, put link if possible
 thumbnailPath: "../../images/EventRegistration/EventRegistration_Icon.png"
+rank: 400
 tags: [SvelteKit, Client, Website, Dropped]
 
 ---
