--- a/src/content/projects/obsidian-auto-embed.mdx
+++ b/src/content/projects/obsidian-auto-embed.mdx
@@ -7,6 +7,7 @@ projectLink: https://obsidian.md/plugins?id=auto-embed
 githubLink: https://github.com/GnoxNahte/obsidian-auto-embed
 thumbnailPath: "../../images/ObsidianAutoEmbed/obsidian-icon.svg"
 tags: [Obsidian, Personal, Windows, Ongoing] 
+rank: 50
 # isDraft:
 ---
 
