--- a/src/content/projects/the-great-tuna-escape.mdx
+++ b/src/content/projects/the-great-tuna-escape.mdx
@@ -6,6 +6,7 @@ releaseDate: 2024-05-20 # format is YYYY-MM-DD
 projectLink: https://itch.io/jam/-pixel-game-jam-2024/rate/2721035
 # githubLink: 
 thumbnailPath: "../../images/TheGreatTunaEscape/TheGreatTunaEscape_Thumbnail2.png"
+rank: 6
 tags: [Unity, GameJam, Windows, WebGL, Completed]
 # isDraft:
 ---
