Modify Home page layout and various CSS layouts. Also import social media icons.

--- a/src/content/projects/the-great-tuna-escape.mdx
+++ b/src/content/projects/the-great-tuna-escape.mdx
@@ -52,7 +52,7 @@ The inspiration came from playing [YouTube's Fullspeed Racing](https://www.youtu
 - **Risk**: Slowing down 
 - **Reward**: 1 boost
 
-#### For Diver
+### For Diver
 - By nearly missing the diver, they can get 3 boost bars and speed away from the diver.
 - If the diver overshoots them, they can dodge or "dance" with the diver and gain a lot of boosts.
 - **Risk**: Losing the game
