Update projects page, slightly update portfolio website, including an updated thumbnail

--- a/src/content/projects/portfolio-website.mdx
+++ b/src/content/projects/portfolio-website.mdx
@@ -5,7 +5,7 @@ startDate: 2023-01-30 # format is YYYY-MM-DD
 # releaseDate:  # format is YYYY-MM-DD
 projectLink: https://gnoxnahte.com/ # default is null, put link if possible
 githubLink: https://github.com/GnoxNahte/portfolio # default is null, put link if possible
-thumbnailPath: "../../images/PortfolioWebsite/PortfolioThumbnail.png"
+thumbnailPath: "../../images/PortfolioWebsite/Portfolio_Thumbnail.png"
 rank: 5
 tags: [Astro, Personal, Website, Ongoing] 
 
@@ -43,7 +43,6 @@ I'm also slowly rebuilding the website - https://gnoxnahte.dev. The main reasons
     - I'm mainly a programmer with very less knowledge on website UI design.
     - Please give feedback on how to improve the website. It would be much appreciated. 
     - Some general UI & UX improvements todo:
-        - Animations - Most interaction just snap to their final transform without any animations, causing a lot of [Cumulative Layout Shift](https://web.dev/cls/) and doesn't look very good.
         - Colors - Using some general dark mode colors for now, could definitely be improved and give the website more life. Also can make the website clearer.
         - Accessibility - Labeling buttons, link / anchor tags, etc for accessibility.
         - Readability - Some parts are lengthy, hard to read. I've tried to my best to divide it into short bullet points but it can definitely be improved further. 
@@ -51,18 +50,19 @@ I'm also slowly rebuilding the website - https://gnoxnahte.dev. The main reasons
     - Adding tags for sharing on different social media websites.
 - Performance
     - Though Astro is very fast, there are still things that can can be improved
-- For a full list on all things that are I'm working on: [Trello](https://trello.com/b/J4MEDHIA/portfolio-website)
 
-<details>
+<details open>
     <summary><h3>Tools Used:</h3></summary>
     - Framework: [Astro](https://astro.build/)
     - Hosting: [GitHub Pages](https://pages.github.com/)
     - IDE: [VS Code](https://code.visualstudio.com/)
 </details>
 
-<details>
+<details open>
     <summary><h3>Icons / Images Used:</h3></summary>
     - <a href="https://www.flaticon.com/free-icons/filter" title="filter icons">Filter icons created by Saepul Nahwan - Flaticon</a>
 </details>
 
-If you have any feedback for the website, please [contact me](/about#contact)
+If you have any feedback for the website, please [contact me](/about#contact).
+
+Thanks for reading the full blog! Or just skipping it to end. Well anyway here's a fun fact, you can see the progress of the projects page in the thumbnail "Portfolio Project".
