Improve inital page load for Itch.io and YouTube embeds
- Add "Click to load" to itch game embeds
- Add YouTubeEmbed component with various settings and set it to load lazily.

--- a/src/content/projects/the-great-tuna-escape.mdx
+++ b/src/content/projects/the-great-tuna-escape.mdx
@@ -9,10 +9,13 @@ thumbnailPath: "../../images/TheGreatTunaEscape/TheGreatTunaEscape_Thumbnail2.pn
 rank: 6
 tags: [Unity, GameJam, Windows, WebGL, Completed]
 # isDraft:
+
 ---
+import ItchGameEmbed from "../../components/ItchGameEmbed.astro";
+import YoutubeEmbed from "../../components/YoutubeEmbed.astro";
 
 ## Game Preview
-<iframe frameborder="0" src="https://itch.io/embed-upload/10506970?color=333333" allowfullscreen="" width="640" height="380"><a href="https://gnoxnahtedev.itch.io/reupload-pixel-game-jam-24">Play Reupload Pixel Game Jam-24 on itch.io</a></iframe>
+<ItchGameEmbed itchLink="https://itch.io/embed-upload/10506970?color=333333" projectName="Test"/>
 
 ## Background
 This was my submission for [Pixel Game Jam - 2024](https://itch.io/jam/-pixel-game-jam-2024). I wasn't able to work on the game for the full duration as I was still in <abbr title="National Service">NS</abbr> and had some duties. 
@@ -59,7 +62,7 @@ The inspiration came from playing [YouTube's Fullspeed Racing](https://www.youtu
 - **Reward**: 3 boost
 
 Here's a video of me dodging the diver.
-<iframe src="https://www.youtube.com/embed/Qc6iz-6DEVM?start=260" title="The Great Tuna Escape, Dev Highscore" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<YoutubeEmbed youtubeLink="https://www.youtube.com/embed/Qc6iz-6DEVM?start=260" title="The Great Tuna Escape Gameplay" />
 
 ### Sound
 Added SFX in the last few minutes. Luckily, I found a [scuba diver breathing](https://pixabay.com/sound-effects/underwater-scuba-diver-28467/) and used it. He can only be heard when he's close to the player, scaring the player and warning them that the diver is close and to speed up or prepare to dodge.
