--- a/src/content/projects/maple-story-bingo-game.mdx
+++ b/src/content/projects/maple-story-bingo-game.mdx
@@ -1,6 +1,6 @@
 ---
 title: MapleStory Bingo Game
-shortDescription: A bingo minigame for a the 17th anniversary MapleStory event
+shortDescription: A bingo minigame for the 17th anniversary MapleStory event
 startDate: 2022-07-30 # format is YYYY-MM-DD
 releaseDate: 2022-08-01 # format is YYYY-MM-DD
 projectLink: https://xgnoxnahte.itch.io/maplebingo
