--- a/src/content/projects/the-great-tuna-escape.mdx
+++ b/src/content/projects/the-great-tuna-escape.mdx
@@ -55,7 +55,7 @@ The inspiration came from playing [YouTube's Fullspeed Racing](https://www.youtu
 - **Risk**: Slowing down 
 - **Reward**: 1 boost
 
-### For Diver
+#### For Diver
 - By nearly missing the diver, they can get 3 boost bars and speed away from the diver.
 - If the diver overshoots them, they can dodge or "dance" with the diver and gain a lot of boosts.
 - **Risk**: Losing the game
@@ -64,7 +64,7 @@ The inspiration came from playing [YouTube's Fullspeed Racing](https://www.youtu
 Here's a video of me dodging the diver.
 <YoutubeEmbed youtubeLink="https://www.youtube.com/embed/Qc6iz-6DEVM?start=260" title="The Great Tuna Escape Gameplay" />
 
-### Sound
+### SFX
 Added SFX in the last few minutes. Luckily, I found a [scuba diver breathing](https://pixabay.com/sound-effects/underwater-scuba-diver-28467/) and used it. He can only be heard when he's close to the player, scaring the player and warning them that the diver is close and to speed up or prepare to dodge.
 
 ## Result
