Remove maplestory project from draft

--- a/src/content/projects/maple-story-bingo-game.mdx
+++ b/src/content/projects/maple-story-bingo-game.mdx
@@ -14,7 +14,7 @@ tags: [Unity, Client, WebGL, Completed]
 # 300 - 399: Below average projects
 # 400 - 500: Bad / dropped projects
 rank: 300
-isDraft: true
+# isDraft: true
 ---
 
 ## Background
