--- a/src/content/projects/maple-story-bingo-game.mdx
+++ b/src/content/projects/maple-story-bingo-game.mdx
@@ -18,6 +18,8 @@ rank: 300
 ---
 
 ## Background
+NOTE: Putting this here because it's my first client project, even though its a bit simple.
+
 Before polytechnic, I self-learnt some [Swift](https://developer.apple.com/swift/) and was offered to freelance a bingo game for a MapleStory event. It was offered by my father who was an designer there. I struggled quite a bit as it was my first client project with only basic programming knowledge. I was able to release it to the iPad using [Testflight](https://developer.apple.com/testflight/) and shared it to them. Sadly, I have lost the source code and the build.
 
 A few years later, after I graduated from polytechnic, they offered to make another bingo minigame, with updated assets. I accepted and this was the game. With stronger programming knowledge, I was able to make a build in 2 days and uploaded it to itch.io where they can easily play.
