Slightly modify project content
Mainly the descriptions

--- a/src/content/projects/event-registration-website.mdx
+++ b/src/content/projects/event-registration-website.mdx
@@ -1,6 +1,6 @@
 ---
 title: Event Registration
-shortDescription: An event registration website that sends QR Code to registered users and allows event staff to easily scan the QR Code to register and identify users.
+shortDescription: An event registration website that greatly shortens registration times by letting event staff easily scan QR Codes to register participants. 
 startDate: 2023-02-11 # format is YYYY-MM-DD
 releaseDate: 2023-04-12 # format is YYYY-MM-DD
 projectLink: https://gnoxnahte-event-registration.netlify.app # default is null, put link if possible
@@ -27,15 +27,15 @@ My father knew I was self-learning web development and asked me if I could devel
 If I was able to make a working prototype, he would help me pitch to his colleagues and boss to outsource the project development to me. So I started building it. 
 
 ## Project building process
-While building, when I showed him a mini <abbr title="Minimum Viable Product">MVP</abbr>, I misunderstood the requirements and thought my father wanted users to register (using email or some authentication service). However, he wanted users to just fill up the form and submit it without any authentication, which I think is better for faster registration for users, even though its slightly less secure. However, this meant I had to remove tons of stuff and wasted a lot of time. Through this, I learnt to clarify the project requirements clearly before developing it.
+While building, when I showed him a mini <abbr title="Minimum Viable Product">MVP</abbr>, I misunderstood the requirements and thought my father wanted users to register (using email or some authentication service). However, he wanted users to just fill up the form and submit it without any authentication, which I think is better for faster registration for users, even though its slightly less secure. This meant I had to remove tons of stuff and wasted a lot of time. Through this, I learnt to clarify project requirements clearly before developing it.
 
-Halfway while building through it, he showed his colleagues and had heard positive comments and thought I was making good progress. When I had a working prototype with all the basic features, he showed it to his boss which was pushed further higher up the leadership ladder. They said that they can't accept it because they aren't comfortable with letting a third-party handle the database and it needed a lot of approval. 
+Halfway while building through it, he showed his colleagues and heard positive comments so I thought I was making good progress. When I had a working prototype with all the basic features, he showed it to his boss which was pushed further higher up the leadership ladder. In the end, they said that they can't accept it because they aren't comfortable with letting a third-party handle the database and it needed a lot of approval. 
 
 Last I heard, they are going to build their own version of it and use my website as a reference.
 
 So, I dropped the project. I might develop it into a full fledged [<abbr title="Software as a Service">SaaS</abbr>](<https://azure.microsoft.com/en-us/resources/cloud-computing-dictionary/what-is-saas#:~:text=Software%20as%20a%20service%20(SaaS,from%20a%20cloud%20service%20provider.>) product in the future when I'm free.
 
-That's the end of the background, all the content below is about the features that were inside.
+That's the end of the background, all the content below is about the features that were inside the website.
 
 ## Overview on user workflow
 1. <span class="person-a">Staff</span> creates a new event
