--- a/src/content/projects/sentient-buffet.mdx
+++ b/src/content/projects/sentient-buffet.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sentient Buffet
-shortDescription: As a world renown chef, you can sometimes find yourself wandering the forest in search of ingredients. However, one day, in a route where you would normally be alone, you find yourself swarmed by living food that begin to attack you. Fight them off, and then cook them for stat buffs to help you venture further into the forest.
+shortDescription: Submission for the Brackeys Game Jam 2022.2. Play as a renowned chef wandering the forest in search of ingredients. As you are exploring the forest, you are attacked by living food. Fight them off, then cook them for stat buffs to help you venture further into the forest.
 startDate: 2022-08-21 # format is YYYY-MM-DD
 releaseDate: 2022-08-28 # format is YYYY-MM-DD
 projectLink: https://team-auboreal.itch.io/sentient-buffet # default is null, put link if possible
@@ -10,7 +10,10 @@ tags: [Unity, GameJam, Windows, Completed]
 
 ---
 
-This game was for [Brackeys Game Jam 2022.2](https://itch.io/jam/brackeys-8)
+This game was for [Brackeys Game Jam 2022.2](https://itch.io/jam/brackeys-8). Theme is *You're not alone*
+
+## Game Description
+As a world renown chef, you can sometimes find yourself wandering the forest in search of ingredients. However, one day, in a route where you would normally be alone, you find yourself swarmed by living food that begin to attack you. Fight them off, and then cook them for stat buffs to help you venture further into the forest.
 
 ## Main Features that I did:
 - Highly Customisable Character Movement script:
