--- a/src/content/projects/spellbound-rollers.mdx
+++ b/src/content/projects/spellbound-rollers.mdx
@@ -1,6 +1,6 @@
 ---
 title: Spellbound Rollers
-shortDescription: "A simple survival game where you have to defend yourself against living dice with your own through utilizing several special powers: Fire, poison, ice etc... Collect the chips, gain XP and unlock more powers!"
+shortDescription: "Submission for GMTK Game Jam 2022. A simple survival game where you have to defend yourself against living dice with your own through utilizing several special powers: Fire, poison, ice etc... Collect the chips, gain XP and unlock more powers!"
 startDate: 2022-07-16
 releaseDate: 2022-07-18
 projectLink: "https://ategon.itch.io/spellbound-rollers"
@@ -14,6 +14,9 @@ tags: [Unity, GameJam, Windows, Completed]
 - Unique Selling Point: The player shoots out dices (following the game jam theme), and depending on what side of the dice is facing up, the player will activate the ability on that face.
 - Inspired by [Vampire Survivors](https://store.steampowered.com/app/1794680/Vampire_Survivors/).
 - This game was for [GMTK Game Jam 2022](https://itch.io/jam/gmtk-jam-2022), theme is "Roll of the Dice".
+
+## Game Description:
+A simple survival game where you have to defend yourself against living dice with your own through utilizing several special powers: Fire, poison, ice etc... Collect the chips, gain XP and unlock more powers!
 
 ## Main Features that I did
 - Attacks 
