--- a/src/content/projects/the-great-tuna-escape.mdx
+++ b/src/content/projects/the-great-tuna-escape.mdx
@@ -1,6 +1,6 @@
 ---
 title: The Great Tuna Escape
-shortDescription: "Play as a rare Bluefin Tuna fish escaping from a diver who's trying to catch you."
+shortDescription: "Submission for the Pixel Game Jam 2024. Play as a rare Bluefin Tuna fish escaping from a diver trying to catch you."
 startDate: 2024-05-11 # format is YYYY-MM-DD
 releaseDate: 2024-05-20 # format is YYYY-MM-DD
 projectLink: https://itch.io/jam/-pixel-game-jam-2024/rate/2721035
