--- a/src/content/projects/independent-work-project.mdx
+++ b/src/content/projects/independent-work-project.mdx
@@ -1,6 +1,6 @@
 ---
 title: Independent Work Project
-shortDescription: My final year project for polytechnic.
+shortDescription: My final year project for polytechnic. Features terrain generation, 2 player class selection with multiplayer and zombie AI.
 startDate: 2021-08-28 # format is YYYY-MM-DD
 releaseDate: 2022-08-28 # format is YYYY-MM-DD
 # projectLink: 
